# Banksystem

./: .gitignore  BankAccount.cpp  BankAccount.hpp  CMakeLists.txt  banksystem.cpp  main.cpp  transaction_log.txt
Docs/: .$Bank.drawio.bkp  .$Logger.drawio.bkp  .$Logger.drawio.dtmp  Logger.drawio  log.md
headers/: Bank.hpp  BankAccount.hpp  Logger.hpp  bank.h  bankAccount.h  bankaccount.h  logger.h
src/: Bank.cpp  BankAccount.cpp  CMakeLists.txt  Logger.cpp  bank.cpp  bankAccount.cpp  bankaccount.cpp  logger.cpp  main.cpp  transaction_log.txt
test/: CMakeLists.txt  test.cpp
